--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
 header{
   width:100%;
   height:300px;
-  background-image: url(danyo.jpg);
+  background-image: url(images/danyo.jpg);
   background-size:cover;
   background-repeat:no-repeat;
   background-position: center;
@@ -69,10 +69,16 @@ header h3{
   margin:10px;
 }
 .project-info{
-  text-align: left; 
+  text-align: center; 
   font-family:initial;
   width:100%;
+  height: 100%;
   padding:10px;
+
+}
+.project-info img{
+  width:50%;
+  max-height:100%;
 }
 
 
@@ -133,7 +139,7 @@ footer{
   background-color: white;
   height:100px;
   text-align: center;
-  
+
 
 }
 @media (max-width:699px){ .contact-form{
@@ -161,7 +167,7 @@ footer{
     text-align: center;
   }
   header{
-     background-image: url(danyandroniinbeach.jpg);
+     background-image: url(images/danyandroniinbeach.jpg);
      background-position: top;
   }
 }
