--- a/style.css
+++ b/style.css
@@ -18,37 +18,31 @@ header{
   background-position: center;
   
 }
-header::before{
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width:100%;
-  height: 300px;
-  background-color:rgba(0,0,0,0.5);
-}
-header h3,.links{
-  position: relative;
+.header-title{
   color:white;
-  padding:5px;
-  z-index:2;
+  padding:10px;
+  background-color:black;
+  opacity:0.5;
 }
-header h3{
-  text-transform:capitalize;
-}
-.links{
-  margin: 10px;;
-}
-.links a{
 
-  font-size:22px;
-  border: none;
-  color:black;
-  padding:5px;
-  font-family:Arial, Helvetica, sans-serif ;
+.info{
+ padding-top:50px;
+
 }
-.links p {
-  margin:10px;
+
+.about_me{
+  color:white;
+  background-color:black;
+  opacity:0.5;
+  padding-left:5px;
+  
+}
+.skills{
+  padding-top:50px;
+  color:white;
+  background-color:black;
+  opacity:0.5;
+  padding-left:5px;
 }
 .galery{
   display:grid;
@@ -88,13 +82,10 @@ header h3{
 
 .projectcard a{
   text-decoration:none;
-  color:black;
-  background-color:white;
+  color:white;
   padding:5px;
   margin:10px;
-  border:none;
   border-radius:5px;
-  position: absolute;
   bottom:0;
   left:40%;
 }
