--- a/style.css
+++ b/style.css
@@ -1,164 +1,121 @@
-
-*{
+* {
   padding:0;
-  margin:0;
-  box-sizing:border-box;
+  margin: 0;
+  box-sizing: border-box;
+  font-family:"roboto" ,sans-serif;
 }
 body{
-  font-family: arial,sans-serif;
-  background-color: #286e36;
-  
+  background-color:var(--bg);
+  padding-top:75px;
+}
+:root{
+  --bg: #0f0f0f;
+  --primary: #39ff14;
+  --accent: #00bcd4;
+  --button:#ff0266;
+  --text:#e0e0e0;
 }
 header{
+  display: flex;
+  position: fixed;
+  left: 0;
+  right:0;
+  top:0;
+  height:70px;
   width:100%;
-  height:300px;
-  background-image: url(images/danyo.jpg);
-  background-size:cover;
-  background-repeat:no-repeat;
-  background-position: center;
-  
-}
-.header-title{
-  color:white;
-  padding:10px;
-  background-color:black;
-  opacity:0.5;
-}
-
-.info{
- padding-top:50px;
+  flex-direction: row;
+  background-color: var(--bg);
+  gap:10px;
+  border-bottom: 2px solid white;
 
 }
-
-.about_me{
-  color:white;
-  background-color:black;
-  opacity:0.5;
-  padding-left:5px;
-  
-}
-.skills{
-  padding-top:50px;
-  color:white;
-  background-color:black;
-  opacity:0.5;
-  padding-left:5px;
-}
-.galery{
-  display:grid;
-  grid-template-rows: repeat(3,1fr);
-  gap:20px;
-  padding: 20px;
-  text-align: center;
-}
-
-.projectcard{
-  position: relative;
-  background-color:#4CAF50;
-  height:200px;
-  color:white;
-  box-shadow:10px 10px 10px rgba(0, 0, 0, 0.5);
-  border-radius: 15px ;
-  padding:5px;
-  margin:10px;
-}
-.project-info{
-  text-align: center; 
-  font-family:initial;
-  width:100%;
-  height: 100%;
-  padding:10px;
-
-}
-.project-info img{
-  width:50%;
-  max-height:100%;
-}
-
-
-.projectcard:hover{
-  transform:scale(1.1);
-}
-
-.projectcard a{
-  text-decoration:none;
-  color:white;
-  padding:5px;
-  margin:10px;
-  border-radius:5px;
-  bottom:0;
-  left:40%;
-}
-.contact-form{
-  background-color: #fff;
-  padding:20px;
-  margin:30px 30% 20px 30%;
-  border-radius:10px;
-  box-shadow:0 0 10px rgba(0,0,0,0.1);
-}
-.contact-form label{
-  display: block;
-  margin-bottom: 5px;
-  font-weight: 700;
-
-}
-.contact-form input{
-  width: 100%;
-  padding:8px;
-  margin-bottom:15px;
-  border-radius: 5px;
-  border:1px solid #ccc;
-  font-family: inherit;
-}
-.contact-form button{
-  width:100%;
-  padding:10px;
-  background-color: #4caf50;
-  color:white;
-  border:none;
-  border-radius:5px;
-  font-size:16px;
-  cursor: pointer;
-} 
-main{
-  
-}
-main .header{
+.logo{
+  color: var(--primary);
   text-align:center;
+  width: 25%;
+  padding-top:20px
+  
+}
+.nav-links{
+  display:flex;
+  width: 70%;
+  justify-content: center;
+  align-items: center;
+}
+.nav-links ul{
+  list-style:none;
+  display: flex;
+  gap: 10px;
+}
+.nav-links ul a{
+  text-decoration: none;
+  font-size:20px;
+  color:var(--text);
+}
+main{
+  display: grid;
+  grid-template-rows:1fr 2fr;
+  width:100%;
+  gap:5px;
+  max-height:1000px;
+
+}
+.about-me{
+  display:flex;
+  flex-direction:row;
+  width:100%;
+}
+.aboutme-text{
+  height: 100%;
+  width: 30%;
+}
+.aboutme-image{
+  height:100%;
+  flex:1;
+}
+.about-me div img{
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+.about-me div p {
+  color: var(--text);
+}
+.projects{
+  display: grid;
+  grid-template-rows:30px 1fr;
+  width: 100%;
+}
+.project-gallery{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+}
+.project-gallery div img{
+  width:100%;
+  object-fit:contain;
 }
 footer{
-  background-color: white;
+  display: grid;
+  grid-template-columns: 2fr 1fr;
+  gap:10px;
   height:100px;
-  text-align: center;
-
-
+  justify-content: center;
+  align-items: center;
+  background-color: var(--bg);
 }
-@media (max-width:699px){ .contact-form{
-    margin:10px;
-  }
+.footer-links ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap:10px;
+  justify-content: center;
+  align-items: center;
 }
-@media  (min-width:700px) {
-  .galery{
-    grid-template-columns:repeat(auto-fit,minmax(300px,1fr));
-    gap:20px;
-    padding: 20px;
-    text-align: center;
-  }
-  .projectcard{
-    height:300px;
-  }
- 
-  
+.footer-links ul a{
+  text-decoration: none;
+  color:var(--text);
+  font-size:20px;
 }
-@media  (min-width:701px) {
-  .galery{
-    grid-template-columns:repeat(auto-fit,minmax(600px,1fr));
-    gap:20px;
-    padding: 20px;
-    text-align: center;
-  }
-  header{
-     background-image: url(images/danyandroniinbeach.jpg);
-     background-position: top;
-  }
+.footer-logo h3{
+  color:var(--primary)
 }
