add a animation to the back ground

--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@
   box-sizing: border-box;
   font-family:"Poppins",sans-serif;
 }
-body{
-  background:#1f242d;
-}
+
 a{
   color: white;
   text-decoration: none;
@@ -103,9 +101,9 @@ a{
   background:#7cf03d;
   color:#1f242d;
   box-shadow: 0 0 10px #1f242d;
-
+  
 }
-.home-img .img-box {
+.home-img .img-box{
   position:relative;
   width:32vw;
   height:32vw;
@@ -116,33 +114,55 @@ a{
   align-items:center;
   overflow: hidden;
 }
-.home-img .img-box::before,
-.home-img .img-box::after
+.home-img .img-box::after,
+.home-img .img-box::before
 {
   content: '';
   position:absolute;
   width:500px;
   height:500px;
-  background:conic-gradient(transparent,transparent,transparent,#7cf03d);
+  background: conic-gradient(transparent,transparent,transparent,#7cf03d);
 
 }
+
 
 .home-img .img-box .img-item{
   position:relative;
   width: 100%;
   height: 100%;
-  border: 1px solid #1f242d;
   border-radius:50%;
+  border: 1px solid #1f242d;
   display:flex;
   justify-content: center;
-  z-index: 1;
   overflow: hidden;
+  z-index:1;
 }
 .home-img .img-box .img-item img{
   position:absolute;
-  top:30px;
   display:block;
-  width:90%;
+  width: 100%;
   object-fit: cover;
   mix-blend-mode:lighten ;
+  background: #1f242d;
+}
+.bars-animation{
+  position: absolute;
+  width:100%;
+  height:100%;
+  display: flex;
+  z-index: -1;
+}
+.bars-animation .bar{
+  width:100%;
+  height:100%;
+  background:#1f242d;
+  transform: translateY(-100%);
+  animation: show-bars .5s ease-in-out  forwards;
+  animation-delay:calc(.1s * var(--i));
+}
+@keyframes show-bars {
+  100%{
+    transform:translateY(0%);
+  }
+  
 }
