--- a/style.css
+++ b/style.css
@@ -20,7 +20,20 @@ a{
   justify-content:space-between ;
   align-items: center;
   z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  animation: show-content 1.5s linear forwards ;
+  animation-delay:1.2s;
+  
 }
+@keyframes show-content {
+  100%{
+    visibility:visible;
+    opacity:1;
+  }
+  
+}
+
 .navbar .logo{
   font-size:30px;
   font-weight: 700;
@@ -49,7 +62,10 @@ a{
   height: 100vh;
   padding: 60px 9% 0;
    color:#fff;
-
+   visibility: hidden;
+   opacity: 0;
+  animation: show-content 1.5s linear forwards ;
+  animation-delay:1.6s;
 }
 .home-info h1{
   font-size:55px;
