--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ a{
 .home{
   display:flex;
   align-items: center;
+  gap:50px;
   height: 100vh;
   padding: 60px 9% 0;
    color:#fff;
@@ -72,8 +73,41 @@ a{
 
 }
 .home-info h2{
+  display: inline-block;
   font-size:32px;
   margin-top: -10px;
+}
+.home-info h2 span{
+  position:relative;
+  display: inline-block;
+  color: transparent;
+  -webkit-text-stroke:.7px #7cf03d;
+  animation: display-text 16s linear infinite;
+  animation-delay: calc(-4s*var(--i));
+}
+@keyframes display-text{
+  25%,100%{
+    display:none;
+  }
+}
+.home-info h2 span::before {
+  content:attr(data-text);
+  position:absolute;
+  width:0;
+  border-right: 2px solid #7cf03d;
+  color:#7cf03d;
+  white-space:nowrap;
+  overflow: hidden;
+  animation: fill-text 4s linear infinite;
+}
+@keyframes fill-text{
+  10%,100%{
+    width: 0;
+  }
+  70%,90%{
+    width:100%;
+  }
+
 }
 .home-info p {
   font-size:16px;
@@ -138,7 +172,17 @@ a{
   width:500px;
   height:500px;
   background: conic-gradient(transparent,transparent,transparent,#7cf03d);
+  transform: rotate(0deg);
+  animation:rotate-border 10s linear infinite ;
 
+}
+.home-img .img-box::after {
+  animation-delay: -5s;
+}
+@keyframes rotate-border {
+  100%{
+    transform: rotate(360deg)
+  }
 }
 
 
