--- a/style.css
+++ b/style.css
@@ -56,6 +56,18 @@ a{
   color:#7cf03d;
 }
 
+@media (max-width:360px){
+  .navbar .logo{
+    font-size:15px;
+  }
+  .navbar ul li {
+    margin-left:10px;
+  }
+   .navbar ul li a{
+    font-size:10px;
+
+   }
+}
 .home{
   display:flex;
   align-items: center;
@@ -70,7 +82,7 @@ a{
 }
 .home-info h1{
   font-size:55px;
-
+  
 }
 .home-info h2{
   display: inline-block;
@@ -107,12 +119,13 @@ a{
   70%,90%{
     width:100%;
   }
-
+  
 }
 .home-info p {
   font-size:16px;
   margin: 10px 0 25px;
 }
+
 .home-info .btn-sci{
   display:flex;
   align-items: center;
@@ -147,6 +160,7 @@ a{
   margin:0 8px;
   transition: .5s;
 }
+
 .home-info .btn-sci .sci a:hover {
   background:#7cf03d;
   color:#1f242d;
@@ -163,6 +177,43 @@ a{
   justify-content:center;
   align-items:center;
   overflow: hidden;
+}
+@media (max-width:360px){
+    .home{
+      gap:25px;
+      padding:30px 9% 0;
+    }
+    .home-info h1{
+      font-size:27.5px;;
+    }
+    .home-info h2{
+      font-size:16px;
+      margin-top:-5px;
+    }
+    .home-info p{
+      font-size:8px;
+      margin: 5px 0 25px;
+    }
+    .btn{
+      padding:4px 5px;
+      border-radius:20px;
+      font-size:6px;
+      
+    }
+    .home-info  .btn-sci .sci{
+      margin-left:10px;
+    }
+  .home-info  .btn-sci .sci a{
+    font-size:10px;
+    padding:4px;
+    margin: 0 4px;
+  }
+}
+.home-img .img-box{
+  width:16vw;
+  height:16vw;
+  border-radius: 50%;
+  padding:2.5px;
 }
 .home-img .img-box::after,
 .home-img .img-box::before
